--- a/components/song-list-item/song-list-item.wxml
+++ b/components/song-list-item/song-list-item.wxml
@@ -1,7 +1,7 @@
 <!--components/song-list-item/song-list-item.wxml-->
 <!--components/song-list-item/index.wxml-->
 <wxs module="format" src="../../utils/format.wxs"></wxs>
-<view class="item">
+<view class="item" bindtap="onItemClick">
   <view class="top">
     <image class="image" mode="widthFix" src="{{ itemData.coverImgUrl }}"></image>
     <view class="play-counter">{{ format.countFormat(itemData.playCount) }}</view>
