ADD：歌曲播放页面

--- a/pages/detail-song/detail-song.wxml
+++ b/pages/detail-song/detail-song.wxml
@@ -5,6 +5,6 @@
 <view wx:else class="title">{{ songInfo.name }}</view>
 <view class="song-list">
   <block wx:for="{{ songInfo.tracks }}" wx:key="id">
-    <song-item-v2 itemData="{{ item }}" index="{{ index + 1 }}" />
+    <song-item-v2 itemData="{{ item }}" index="{{ index + 1 }}" bindtap="onSongItemTap" data-index="{{ index }}" />
   </block>
 </view>
