--- a/pages/detail-song/detail-song.wxml
+++ b/pages/detail-song/detail-song.wxml
@@ -5,6 +5,12 @@
 <view wx:else class="title">{{ songInfo.name }}</view>
 <view class="song-list">
   <block wx:for="{{ songInfo.tracks }}" wx:key="id">
-    <song-item-v2 itemData="{{ item }}" index="{{ index + 1 }}" bindtap="onSongItemTap" data-index="{{ index }}" />
+    <song-item-v2 
+      itemData="{{ item }}" 
+      index="{{ index + 1 }}" 
+      menuList="{{ menuList }}"
+      data-index="{{ index }}" 
+      bindtap="onSongItemTap" 
+    />
   </block>
 </view>
